# m8-sample-sorter

./: .gitignore  README.md  WORKSPACE  go.mod  go.sum
bundles/: BUILD.bazel
bundles/factory/: BUILD.bazel
data/: packs.yaml
instruments/: BUILD.bazel
instruments/factory/: BUILD.bazel
m8/: BUILD.bazel
samples/: rules.bzl
samples/BD/: BUILD.bazel
samples/Clap/: BUILD.bazel
samples/Drums/BD/: BUILD.bazel
samples/Drums/CH/: BUILD.bazel
samples/Drums/Clap/: BUILD.bazel
samples/Drums/Cowbell/: BUILD.bazel
samples/Drums/Cymbal/: BUILD.bazel
samples/Drums/OH/: BUILD.bazel
samples/Drums/SD/: BUILD.bazel
samples/Drums/Tom/: BUILD.bazel
samples/Loops/Pads/: BUILD.bazel
samples/Perc/: BUILD.bazel
samples/Rim/: BUILD.bazel
samples/Tom/: BUILD.bazel
samples/Vocals/Stems/: BUILD.bazel
samples/drums/: BUILD.bazel
samples/drums/BD/: BUILD.bazel
samples/drums/CH/: BUILD.bazel
samples/drums/Clap/: BUILD.bazel
samples/drums/Cowbell/: BUILD.bazel
samples/drums/Cymbal/: BUILD.bazel
samples/drums/OH/: BUILD.bazel
samples/drums/Perc/: BUILD.bazel
samples/drums/Rim/: BUILD.bazel
samples/drums/SD/: BUILD.bazel
samples/drums/Tom/: BUILD.bazel
samples/loops/: BUILD.bazel
samples/loops/pads/: BUILD.bazel
samples/vocals/: BUILD.bazel
samples/vocals/stems/: BUILD.bazel
scales/: BUILD.bazel  data.bzl  rules.bzl
scales/factory/: BUILD.bazel
songs/: BUILD.bazel
songs/demos/: BUILD.bazel
themes/: BUILD.bazel
themes/factory/: BUILD.bazel
tools/: main.go
