load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_filegroup", "pkg_files", "pkg_mkdirs", "strip_prefix")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_mkdirs(
    name = "hierarchy",
    dirs = [
        "/Bundles",
        "/Instruments",
        "/Renders",
        "/Samples",
        "/Scales",
        "/Songs",
        "/System",
        "/Themes",
    ],
)

pkg_tar(
    name = "image",
    srcs = [
        ":hierarchy",
        "//bundles:pkgfiles",
        "//instruments:pkgfiles",
        "//samples:pkgfiles",
        "//scales:pkgfiles",
        "//songs:pkgfiles",
        "//themes:pkgfiles",
    ],
)
