load("//samples:rules.bzl", "samples")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")

samples(
    name = "OH",
    data = [
        "@a808_from_mars//:OH",
        "@acoustic_funk_vol_1//:OH",
    ],
)

pkg_files(
    name = "pkgfiles",
    visibility = ["//visibility:public"],
    srcs = [
        ":OH",
    ],
    prefix = "OH",
    strip_prefix = "",
)
